--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <!-- block illustrator -->
         <div class="icons">
-          <div><img src="images/AI.png" alt="Adobe Illustrator"></div>
+          <div><img src="images/Ai.png" alt="Adobe Illustrator"></div>
           <div><p class="p-skills-icon-text">Adobe <br> Illustrator</p></div>
           <div>
               <img src="images/star_black.png" alt="star_black"
@@ -90,7 +90,7 @@
         </div>
         <!-- block after effects -->
         <div class="icons">
-          <div><img src="images/AE.png" alt="After Effects"></div>
+          <div><img src="images/Ae.png" alt="After Effects"></div>
           <div><p class="p-skills-icon-text">Adobe <br>After Effects</p></div>
           <div>
               <img src="images/star_black.png" alt="star_black"
